<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_student_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephnoutsa.cuib.StudentAccount"
    tools:showIn="@layout/activity_student_account">

    <TextView
        android:id="@+id/logoutLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logout_label"
        android:textColor="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@id/logoutLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_label"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nameField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/matricule_label"
                android:id="@+id/matriculeLabel"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/matriculeField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/matricule_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enrolled_label"
                android:id="@+id/enrolledLabel"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/enrolledField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enrolled_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/level_label"
                android:id="@+id/levelLabel"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/levelField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/level_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/school_label"
                android:id="@+id/schoolLabel"
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/schoolField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/school_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dept_label"
                android:textColor="@android:color/black"
                android:id="@+id/deptLabel" />

            <TextView
                android:id="@+id/deptField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dept_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_label"
                android:textColor="@android:color/black"
                android:id="@+id/emailLabel" />

            <TextView
                android:id="@+id/emailField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone_label"
                android:textColor="@android:color/black"
                android:id="@+id/phoneLabel" />

            <TextView
                android:id="@+id/phoneField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone_field"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
