<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephnoutsa.cuib.MyAccount"
    tools:showIn="@layout/activity_my_account">

    <TextView
        android:text="@string/already_subscribed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/forSubscribed" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forSubscribed"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/emailLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_label"
                android:textColor="@android:color/black"
                android:labelFor="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailField"
                android:hint="@string/email_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone_label"
                android:id="@+id/phoneLabel"
                android:labelFor="@+id/phoneField"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/phoneField"
                android:hint="@string/phone_hint"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dob_label"
                android:id="@+id/dobLabel"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/dobField"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dobField"
                android:hint="@string/dob_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender_label"
                android:id="@+id/genderLabel"
                android:textColor="@android:color/black"
                android:labelFor="@+id/genderGroup"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:id="@+id/maleGender"
                    android:textColor="@android:color/black"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:id="@+id/femaleGender"
                    android:textColor="@android:color/black"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_other"
                    android:id="@+id/otherGender"
                    android:textColor="@android:color/black"
                    android:onClick="radioButtonClicked" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/passwordField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_label"
                android:textColor="@android:color/black"
                android:id="@+id/passwordLabel" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight"
                android:id="@+id/passwordField" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/confirmField"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/confirm_label"
                android:textColor="@android:color/black"
                android:id="@+id/confirmLabel"
                android:visibility="gone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/confirm_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight"
                android:id="@+id/confirmField"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:id="@+id/updateAccount"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:onClick="onClickUpdate" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
