<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephnoutsa.cuib.SubscriberLogin"
    tools:showIn="@layout/activity_subscriber_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/wrongCredentials"
                android:layout_marginBottom="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_wrong_credentials"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/emailLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_label"
                android:textColor="@android:color/black"
                android:labelFor="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/emailField"
                android:hint="@string/email_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_label"
                android:id="@+id/passwordLabel"
                android:labelFor="@+id/passwordField"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/passwordField"
                android:hint="@string/login_pw_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:id="@+id/login"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:onClick="onClickLogin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forgot_password"
                android:id="@+id/forgotPassword"
                android:layout_gravity="end" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
